--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@ionic/core": "^4.8.0",
-    "echarts": "4.2.1"
+    "echarts": "4.2.1",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@stencil/core": "^1.3.0",
