--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "test.watch": "stencil test --spec --e2e --watch",
     "generate": "stencil generate"
   },
-  "dependencies": {
+  "devDependencies": {
     "@ionic/core": "^4.8.0",
+    "@stencil/core": "^1.3.0",
+    "@stencil/sass": "^1.0.1",
     "echarts": "4.2.1",
     "html2canvas": "^1.0.0-rc.3",
     "uuid": "^3.3.3"
-  },
-  "devDependencies": {
-    "@stencil/core": "^1.3.0",
-    "@stencil/sass": "^1.0.1"
   }
 }
