--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/core": "^4.9.0",
     "@stencil/core": "^1.3.0",
     "@stencil/sass": "^1.0.1",
+    "@stencil/router": "1.0.1",
     "echarts": "4.2.1",
     "html2canvas": "^1.0.0-rc.3",
     "uuid": "^3.3.3",
