--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "stencil build",
+    "build": "stencil build  --prod",
     "start": "stencil build --dev --watch --serve",
     "devWithSW": "stencil build --dev --service-worker --watch --serve",
     "test": "stencil test --spec --e2e",
