--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "echarts": "4.2.1",
     "html2canvas": "^1.0.0-rc.3",
     "uuid": "^3.3.3",
-    "workbox-build": "4.3.1"
+    "workbox-build": "4.3.1",
+    "@capacitor/android": "^1.3.0",
+    "@capacitor/core": "^1.3.0"
   }
 }
