--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "uuid": "^3.3.3",
     "workbox-build": "4.3.1",
     "@capacitor/android": "^1.3.0",
-    "@capacitor/core": "^1.3.0"
+    "@capacitor/core": "^1.3.0",
+    "@capacitor/cli": "^1.3.0"
   }
 }
