--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "icons": [{
-    "src": "assets/icon/icon-192.png",
+    "src": "./assets/icon/icon-192.png",
     "sizes": "192x192",
     "type": "image/png"
   },{
